# yellow-lore

./: LICENSE  NOTES.md  README.md  index.html  package.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: App.tsx  api.ts  global.css  index.tsx  store.ts  theme.ts  update.ts  version.ts  vite-env.d.ts  window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  error.rs  extract.rs  lib.rs  main.rs  providers.rs  rag.rs  vector_store.rs
src/components/: AbilitiesView.tsx  CharactersView.tsx  ChatView.tsx  CitationModal.tsx  CreateVaultModal.tsx  Dialog.tsx  EditDrawer.tsx  Graph.tsx  InformationModal.tsx  KnowledgeView.tsx  Markdown.tsx  MentionPopover.tsx  Ornament.tsx  PlacesView.tsx  SettingsView.tsx  Sidebar.tsx  SourcePopover.tsx  TitleBar.tsx  UpdateBanner.tsx  VaultSwitcher.tsx
