[package]
name = "yellow-lore"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yellow_lore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["sync", "time"] }
uuid = { version = "1", default-features = false, features = ["v4"] }
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
blake3 = { version = "1", default-features = false }
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.36", default-features = false }

# Auto-update: pulls signed bundles from the GitHub Release and relaunches.
# Desktop only (updater/process aren't for mobile); `cfg(desktop)` is a Tauri
# custom cfg cargo can't resolve here, so gate on the real target predicate.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Size-oriented release profile: opt-level "s" (balance of speed/size), fat LTO,
# single codegen unit, abort on panic (no unwinding tables), and symbol stripping.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

